fix overflow main page desktop

--- a/src/app/components/login/main-page/main-page.component.scss
+++ b/src/app/components/login/main-page/main-page.component.scss
@@ -5,7 +5,6 @@
   height: 100%;
   width: 100%;
   background-color: rgba($color: $primary, $alpha: 0.3);
-  display: inline-block;
 }
 
 .control-container-desktop{
